--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://moonsh1998.github.io/chart_study/",
+  "homepage": "https://moonsh1998.github.io/chart_study",
   "name": "chart_study",
   "version": "0.1.0",
   "private": true,
