--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.7.0",
     "d3": "^7.3.0",
+    "d3-tip": "^0.9.1",
+    "d3-webpack-loader": "^0.1.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.0",
     "react-dom": "^17.0.2",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
+    "recharts": "^2.1.8",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -47,7 +52,7 @@
     "@babel/node": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
     "@babel/preset-react": "^7.16.7",
-    "babel-loader": "^8.2.3",
+    "fix": "^0.0.3",
     "gh-pages": "^3.2.3",
     "resize-observer-polyfill": "^1.5.1",
     "use-resize-observer": "^8.0.0"
